--- a/server-py/pyproject.toml
+++ b/server-py/pyproject.toml
@@ -23,3 +23,7 @@ dev = [
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
+
+[tool.hatch.build.targets.wheel]
+packages = ["src"]
+
