--- a/client/package.json
+++ b/client/package.json
@@ -8,7 +8,7 @@
         "build": "tsc && vite build",
         "preview": "vite preview",
         "predeploy": "npm run build",
-        "deploy": "gh-pages -d dist"
+        "deploy": "./deploy.sh"
     },
     "dependencies": {
         "@tailwindcss/vite": "^4.1.18",
