--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,49 @@
-
+# Node
 node_modules
 dist
+dist-ssr
+*.local
+
+# Python
+__pycache__
+*.py[cod]
+*$py.class
+venv/
+.venv/
+env/
+.env/
+.pytest_cache/
+.coverage
+htmlcov/
+site-packages/
+
+# Database
+*.db
+*.sqlite3
+undercover.db
+
+# Environment Variables
 .env
 .env.*
 !.env.example
-__pycache__
-*.py[cod]
+!.env.production
+
+# IDEs
+.vscode/*
+!.vscode/extensions.json
+!.vscode/settings.json
+.idea/
+*.swp
+*.swo
+
+# OS
 .DS_Store
+Thumbs.db
+.directory
+
+# Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+logs/
+*.log
