--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -26,7 +26,9 @@ jobs:
 
       - name: Build Web App
         working-directory: ./client
-        run: npm run build
+        run: |
+          npx tsc -b
+          npx vite build --base ./
 
       - name: Sync Capacitor
         working-directory: ./client
