--- a/client/package.json
+++ b/client/package.json
@@ -32,6 +32,7 @@
         "zustand": "^5.0.9"
     },
     "devDependencies": {
+        "@capacitor/assets": "^3.0.5",
         "@types/react": "^18.2.43",
         "@types/react-dom": "^18.2.17",
         "@vitejs/plugin-react": "^4.2.1",
