--- a/client/package.json
+++ b/client/package.json
@@ -29,6 +29,7 @@
         "socket.io-client": "^4.8.3",
         "tailwind-merge": "^3.4.0",
         "tailwindcss": "^4.1.18",
+        "tailwindcss-animate": "^1.0.7",
         "zustand": "^5.0.9"
     },
     "devDependencies": {
